<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UChoose</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="author">made by王锡悦，彭海威，沈雯，杨弯弯，王晓颖</string>
    <string name="login">登录</string>
    <string name="zhanghao">请输入账号</string>
    <string name="mima">请输入密码</string>
    <string name="wangjimima">忘记密码</string>
    <string name="newUser">新用户</string>
    <string name="aaa">避免出现！</string>
    <string name="registered">注册</string>
    <string name="fasongyanzheng">发送验证</string>
    <string name="meiriqiandao">   每日签到</string>
    <string name="gerenzhongxin">   个人中心</string>
    <string name="xiuxianxiaoyouxi">   休闲小游戏</string>
    <string name="wodexuanze">   我的选择</string>
    <string name="gexingzhuangban">   个性装扮</string>
     <string name="ballot">   投票</string>
    

</resources>
